==================================================
Changes in CALIBERcodelists version 0.2-4
==================================================

BUG FIXES

- Read to ICD-9 conversion now works (a function
  was omitted from previous version)
- Bug in setMetadata (setting Source) corrected

==================================================
Changes in CALIBERcodelists version 0.2-3
==================================================

NEW FEATURES

- Allow setMetadata to set data source HES/ONS in META
- Add a decode() function to return the term from a 
  medcode, Read code, ICD10 or OPCS code
- Add the ICD9-CM dictionary and ICD9-ICD10 mapping

BUG FIXES

- codematch allows a vector of codes to match with
  exact = FALSE (previously only worked with exact = TRUE)
- Excluded category now has a description in the table
  of contents in HTML document

==================================================
Changes in CALIBERcodelists version 0.2-2
(third version on R-Forge)
==================================================

NEW FEATURES

- a new function medcodeis() which creates a selection
  based on medcodes
- codematch() can accept a vector of codes to match.
  Thanks to Joshua for suggesting this.
- a function getCodelist() which finds and loads a
  CALIBER format codelist from a directory tree.

CHANGES

- when termhas() is called with a vector of regular
  expressions, they are combined using OR rather than
  AND. This is for consistency with the codematch,
  medcodeis and dictis functions.
- textToDate() is no longer exported so that it
  does not conflict with the textToDate function
  in the CALIBERdatamanage package.
- compare() now lists changed codes sorted by code

BUG FIXES

- setdictionary() no longer misses out the first category
  (error in CALIBERcodelists:::retrieveCategoriesFromMETA()
  which returned an entry with category 0 if the META
  category table was empty)
- fixed bugs in codelistToDict (called by setdictionary()).